--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Resume</title>
 </head>
 <body>
-    <center><h3>THIS IS TASK </h3></center>
+    <center><h3>THIS IS TASK 1</h3></center>
     <ol>
-    <center><li><a href="obeject.html"target="_blank"><button><b>Objective</b></button></a></li></center>
-    <center> <li><a href="skill.html"target="_blank"><button><b>Skill</b></button></a></li></center>
-    <center> <li><a href="Achievement.html"target="_blank"><button><b>Achievement</b></button></a></li></center>
+    <li><a href="obeject.html"target="_blank"><button><b>Objective</b></button></a></li>
+     <li><a href="skill.html"target="_blank"><button><b>Skill</b></button></a></li>
+     <li><a href="Achievement.html"target="_blank"><button><b>Achievement</b></button></a></li>
     </ol>
 </body>
 </html>
